covid-recovery fix height cutoff

--- a/app/static/features/covid-recovery/_styles.sass
+++ b/app/static/features/covid-recovery/_styles.sass
@@ -188,7 +188,7 @@ $color-mt: #7c94a2
   font-family: Sans, sans-serif
 
 .txt-links
-  font-size: 40px
+  font-size: 32px
   line-height: 48px
   margin-top: -4px
 
